infrastructure/poller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poller
  template:
    metadata:
      labels:
        app: poller
    spec:
      containers:
      - name: poller
        image: fadygamil/poller:latest
